--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             const noButton = document.querySelector('.no');
             const x = Math.random() * (window.innerWidth - 100);
             const y = Math.random() * (window.innerHeight - 50);
-            noButton.style.left = ${x}px;
-            noButton.style.top = ${y}px;
+            noButton.style.left = `${x}px`;
+            noButton.style.top = `${y}px`;
         }
 
         function showSurprise() {
