--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 noButton.innerText = phrases[noClicks - 1];
             } else {
                 document.body.style.backgroundColor = "#808080";
-                document.getElementById("title").innerText = "Okay... i understand.., i hope you have a good day....";
+                document.getElementById("title").innerText = "i understand.., i hope you have a good day....";
                 document.getElementById("main-container").style.display = "none";
                 document.getElementById("rejected").style.display = "flex";
             }
